--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "sh ./fix.sh"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.15.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
